assets/style.css
/* dwayne-inator-5000 custom styles
–––––––––––––––––––––––––––––––––––––––––– */

@media (prefers-color-scheme: dark) {
	:root {
		--blue: #6cb2fc;
		--darkblue: #79a0fc;
		--orange: #602d00;
		--darkorange: #fcac76;
		--pink: #fcb3e0;
		--purple: #be9ffc;
		--gray: #313131;
		--green: #153917;
		--darkgreen: lightgreen;
		--darkyellow: goldenrod;
		--darkred: #e55;
		--red: #700;
		--darkgray: #eae8ea;
		--lightgray: #1f1f1f;
		--white: #1a1a1d;
		--black: #fcfcfc;
	}
}

@media (prefers-color-scheme: light) {
	:root {
		--blue: #469efc;
		--darkblue: #3547e8;
		--orange: #fc9550;
		--darkorange: #602d00;
		--pink: #f796d2;
		--purple: #a16fed;
		--gray: #ddd;
		--green: #aea;
		--darkgreen: darkgreen;
		--darkyellow: goldenrod;
		--darkred: #700;
		--red: #e55;
		--darkgray: #313131;
		--lightgray: #f6f6f6;
		--black: #212121;
		--white: #fcfcfc;
	}
}

html {
    background-color: var(--white);
}

body {
	font-family: Helvetica, Noto Sans, sans-serif;
	font-size: 105%;
	max-width: 55rem;
	width: 80%;
	margin: 0.4rem auto;
	padding: 1.5rem;
	color: var(--black);
}

blockquote {
	font-style: italic;
	background: var(--lightgray);
	border-left: 0.3rem solid var(--blue);
	margin-left: 0;
	margin-right: 0;
	border-radius: 0.3rem;
	padding: 0.8rem;
}

blockquote p {
	    margin-bottom: 0;
}

.no-decoration {
	    text-decoration: none;
}

sup, sub {
	    vertical-align: baseline;
	        position: relative;
	            top: -0.4em;
}

sup a {
	text-decoration: none;
}

p {
    margin-top: 0.8rem;
}

a {
	color: var(--darkblue);
}

code {
    font-size: 120%;
}

hr {
    color: var(--lightgray);
    margin: 1rem 0;
}


/* headers and nav
–––––––––––––––––––––––––––––––––––––––––– */

h2, h3 {
    text-align: center;
}

h3 {
    font-weight: normal;
}

.nav {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.nav a {
    flex-grow: 1;
}

.nav div {
	flex-grow: 1;
	display: block;
	text-align: right;
}

.nav > div > a {
	margin-left: 0.5rem;
}

hr {
    border-top: 2px solid var(--darkgray);
    border-bottom-width: 0px;
}

/* table styles
–––––––––––––––––––––––––––––––––––––––––– */

table, .graph {
    margin: 0 auto;
    padding: 0 0.5rem;
    width: 100%;
    text-align: center;
    border-spacing: 0;
    border-collapse: 0;
    background-image: url("/assets/logo.png");
    background-size: 8rem;
}

table a {
    display: block;
    text-decoration: none;
    text-align: center;
}

th {
    font-weight: bold;
}

td, th {
    font-weight: normal;
    padding: 0.7rem;
}

.status {
    text-align: center;
}

th {
    border-bottom: 3px solid var(--darkgray);
}

.checks tr td:first-child {
    font-weight: normal;
}

.teamname, .teamname a {
    text-align: right;
}

th:nth-child(n+2){
    border-left: 3px solid var(--darkgray);
}

tr td:nth-child(n+2){
    border-left: 3px solid var(--darkgray);
}

tr td:first-child {
    font-weight: bold;
}

tr td {
    border-bottom: 3px solid var(--darkgray);
}

tr:last-child td {
    border-bottom-width: 0;
}

tr:nth-child(n+2) a {
    cursor: pointer;
}

fieldset {
    text-align: center;
    width: 30%;
    margin: 0 auto;
    padding: 0 2rem;
}

td img {
    width: 1.8em;
}

.persisted {
    background-image: url("/assets/bones.png");
    background-repeat: no-repeat;
    background-size: 80%;
    background-position: center;
}


/* form styles
–––––––––––––––––––––––––––––––––––––––––– */

input, select {
    color: var(--black);
    background-color: var(--white);
    padding: 0.2rem 0.4rem;
    margin: 0.1rem auto;
	border-radius: 0.2rem;
}

textarea {
    width: 100%;
    padding: 1rem;
    min-height: 300px;
    margin-bottom: 0.7rem;
    background-color: var(--white);
    color: var(--black);
    border-radius: 0.2rem;
}

#injectUpload {
    text-align: center;
    display: block;
    width: 100%;
    padding: 0.5em;
    border-radius: 0.3em;
}

/* visibility trick
–––––––––––––––––––––––––––––––––––––––––– */
html {
    display: block;
}

